--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -24,7 +24,7 @@
             <?php 
             echo $this->url(array('controller' => 'projetos', 
                                   'action'     => 'detalhar-projeto', 
-                                  'id' => $projeto->idprojeto
+                                  'idprojeto' => $projeto->idprojeto
                     )
                     ); 
             ?>" 
@@ -35,7 +35,7 @@
             <?php 
             echo $this->url(array('controller' => 'projetos', 
                                   'action'     => 'editar', 
-                                  'id' => $projeto->idprojeto
+                                  'idprojeto' => $projeto->idprojeto
                     )
                     ); 
             ?>" 
@@ -46,7 +46,7 @@
             <?php 
             echo $this->url(array('controller' => 'projetos', 
                                   'action'     => 'alocar', 
-                                  'id' => $projeto->idprojeto
+                                  'idprojeto' => $projeto->idprojeto
                     )
                     ); 
             ?>" 
@@ -56,7 +56,7 @@
             <?php 
             echo $this->url(array('controller' => 'projetos', 
                                   'action'     => 'desalocar', 
-                                  'id' => $projeto->idprojeto
+                                  'idprojeto' => $projeto->idprojeto
                     )
                     ); 
             ?>" 
