--- a/application/views/scripts/usuarios/listar.phtml
+++ b/application/views/scripts/usuarios/listar.phtml
@@ -67,7 +67,7 @@
                     )
                     ); 
             ?>" 
-            title="Remover"><img src="imagens/118.png"/>
+            title="Remover"><img src="/imagens/118.png"/>
         </a>
         </td>
     </tr>
