correção no bug de exibir edição de projetos

--- a/application/views/scripts/projetos/editar.phtml
+++ b/application/views/scripts/projetos/editar.phtml
@@ -16,7 +16,7 @@ else :
     </label>
     <br /> 
     <label>Data Início: 
-        <input type="text" id="dataInicio" name="dataInicio" value="<?= $this->projeto->datainic ?>" />
+        <input type="text" id="dataInicio" name="dataInicio" value="<?= $this->projeto->datainicio ?>" />
     </label>
     <br />
     <label>Data Fim(Previsão): 
