Alterações Usuários e Arquvios JavaScript.

--- a/application/views/scripts/usuarios/listar.phtml
+++ b/application/views/scripts/usuarios/listar.phtml
@@ -1,4 +1,7 @@
-<?php echo $this->headLink()->appendStylesheet('/css/telaUsuarios.css');?>
+<?php echo $this->headLink()->appendStylesheet('/css/telaUsuarios.css');
+echo $this->headScript()->appendFile('/js/jquery-1.7.2.js');
+      echo $this->headScript()->appendFile('/js/layoutTabela.js');
+?>
 
 <div id="botaoCad">
     <a href="
