--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -14,48 +14,48 @@ else :
 		<fieldset id="pessoal">
 				<legend>Informa&ccedil;&otilde;es pessoais</legend>
 		      
-		      <label>Nome do Usu&aacute;rio:</label> <br>
-		      <input type="text" size="60px"/><br></br>
+		      <label>Nome do Usu&aacute;rio: <br/>
+		      <input type="text" size="60px"/></label><br/><br/>
 		      
-		      <label>Data de Nascimento:</label>
-		      <label style="margin-left: 3%">Sexo:</label><br>
-		      <input type="text" name="data_nasc" id="data_nasc" size="14"/>
+		      <label>Data de Nascimento:
+		      <label style="margin-left: 3%">Sexo:<br/>
+		      <input type="text" name="data_nasc" id="data_nasc" size="14"/></label>
 		      
 		      <select>
 			  <option>Masculino</option>
 			  <option>Feminino</option>
-		      </select> <br><br>
+		      </select> </label><br/><br/>
 		      
 		      <label>CPF
-		      <label style="margin-left: 33.5%">Telefone:</label><br>
-		      <input type="text"/>
-		      <input type="text"/><br><br>
+		      <label style="margin-left: 33.5%">Telefone:<br/>
+		      <input type="text"/></label>
+		      <input type="text"/></label><br/><br/>
 		      
-		      <label>E-mail:</label><br>
-		      <input type="text" size="60px"/><br></br>
+		      <label>E-mail:<br/>
+		      <input type="text" size="60px"/></label><br></br>
 
 
-		      <label> Login do Usu&aacute;rio:</label><br>
-			  <input type="text"/>
+		      <label> Login do Usu&aacute;rio:<br/>
+			  <input type="text"/></label>
 
 		</fieldset>
 
 		<fieldset id="endereco">
 		      <legend>Endere&ccedil;o</legend>
 		      
-		      <label>Rua:</label>
-		      <label style="margin-left: 65%">N&uacute;mero:</label><br>
-		      <input type="text" size="40px"/>
-		      <input type="text" size="5px"/><br></br>
+		      <label>Rua:
+		      <label style="margin-left: 65%">N&uacute;mero:<br>
+		      <input type="text" size="40px"/></label>
+		      <input type="text" size="5px"/></label><br></br>
 		      
-		      <label>Bairro: </label>
-		      <label style="margin-left: 30.5%">Complemento</label><br>
-		      <input type="text"/>
-		      <input type="text"/> <br><br>
+		      <label>Bairro: 
+		      <label style="margin-left: 30.5%">Complemento<br>
+		      <input type="text"/></label>
+		      <input type="text"/> </label><br><br>
 		      
-		      <label>Cidade:</label> 
-		      <label style="margin-left: 29.5%">Estado:</label> <br>
-		      <input type="text"/>
+		      <label>Cidade: 
+		      <label style="margin-left: 29.5%">Estado:<br>
+		      <input type="text"/></label>
 		      
 		      <select>
 			  <option>AC</option>
@@ -85,7 +85,7 @@ else :
 			  <option>SE</option>
 			  <option>SP</option>
 			  <option>TO</option>
-		      </select><br></br>
+		      </select></label> <br></br>
 
 
 			<input id="cancelar" type="submit" value="Cancelar"/>
