--- a/public/css/telaProjetos.css
+++ b/public/css/telaProjetos.css
@@ -10,6 +10,7 @@
   cursor:pointer;
   padding: 0.6%;
   width: 90px;
+  text-align: center;
 }
 
 #botaoCad:hover {
@@ -19,7 +20,6 @@
 
 #botaoCad a {
 	text-decoration: none;
-	margin-left: 10%;
 	color: gray;
 }
 
