--- a/public/css/telaUsuarios.css
+++ b/public/css/telaUsuarios.css
@@ -1,11 +1,12 @@
 #tabelaUsuarios {
     border-collapse:collapse;
-    margin-top: 2%;
+    margin: 0 auto;
     background: #FFE9E8;
 }
 
 #tabelaUsuarios, td, th {
     border:1px solid #C1CDC1;
+    padding: 5px;
 }
 
 .odd {
@@ -20,8 +21,6 @@ tr th {
     text-align: center;
     height: 30px;
 }
-
-
 
 td {
     text-align: center;
@@ -48,26 +47,31 @@ td {
 }
 
 #botaoCad {
-  margin-left: 91%;
-  margin-top: 2%;
-  background:#d3d4e8;
-  border:4px solid #ffffff;
-  text-align: center;
-  text-shadow:0px 0px 0px #2e2d2e;
-  box-shadow:0px 0px 1px #000000;
-  cursor:pointer;
-  width: 90px;
-  height: 40px;
+    margin-left: 91%;
+    margin-top: 2%;
+    background:#d3d4e8;
+    border:4px solid #ffffff;
+    text-align: center;
+    text-shadow:0px 0px 0px #2e2d2e;
+    box-shadow:0px 0px 1px #000000;
+    cursor:pointer;
+    width: 90px;
+    height: 40px;
 }
 
 #botaoCad:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd)); 
-  cursor: pointer;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd)); 
+    cursor: pointer;
 }
 
 #botaoCad a {
-	text-decoration: none;
-	  font:bold 15px Arial;
-  color:#838383;
-  margin: 0 auto;
+    text-decoration: none;
+    font:bold 15px Arial;
+    color:#838383;
+    margin: 0 auto;
+}
+
+#paginacao {
+    position: relative;
+    margin-left: 625px;
 }
