Verificação se existe usuário logado. Identificação do usuário logado.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -12,7 +12,7 @@
         <div id="header">
             <img src="/imagens/logo.png" width="145px" height="75px"/>
             <div id="login">
-                    <a href="#">Rafaela Souza</a> | <a href="/login/logout">logout</a>
+                    <a href="#"><?= $this->usuarioLogado->nome ?></a> | <a href="/login/logout">logout</a>
                     <br><a href="#"><img src="/imagens/Brazil-icon.png"/></a>
                     <a href="#"><img src="/imagens/France-icon.png"/></a>
                     <a href="#"><img src="/imagens/United-States-of-Americ-icon.png"/></a>
