Alterações no Usuário.

--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -51,7 +51,7 @@
                         )
                         ); 
                 ?>" 
-                title="Remover"><img src="/imagens/alocar.png"/>
+                title="Alocar"><img src="/imagens/alocar.png"/>
             </a></li>
             
             <li><a href="
@@ -62,7 +62,7 @@
                         )
                         ); 
                 ?>" 
-                title="Remover"><img src="/imagens/edit.png"/>
+                title="Desalocar"><img src="/imagens/edit.png"/>
             </a></li>
             
             <li><a href="
