--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -15,28 +15,28 @@ else :
 				<legend>Informa&ccedil;&otilde;es pessoais</legend>
 		      
 		      <label>Nome do Usu&aacute;rio: <br/>
-		      <input type="text" size="60px"/></label><br/><br/>
+		      <input type="text" id="nome" name="nome" size="60px"/></label><br/><br/>
 		      
 		      <label>Data de Nascimento:
 		      <label style="margin-left: 3%">Sexo:<br/>
-		      <input type="text" name="data_nasc" id="data_nasc" size="14"/></label>
+		      <input type="text" id="dataNasc" name="dataNasc" size="14"/></label>
 		      
-		      <select>
+		      <select id="sexo" name="sexo"> 
 			  <option>Masculino</option>
 			  <option>Feminino</option>
 		      </select> </label><br/><br/>
 		      
 		      <label>CPF
 		      <label style="margin-left: 33.5%">Telefone:<br/>
-		      <input type="text"/></label>
-		      <input type="text"/></label><br/><br/>
+		      <input type="text" id="cpf" name="cpf"/></label>
+		      <input type="text"id="telefone" name="telefone"/></label><br/><br/>
 		      
 		      <label>E-mail:<br/>
-		      <input type="text" size="60px"/></label><br></br>
+		      <input type="text" id="email" name="email" size="60px"/></label><br></br>
 
 
 		      <label> Login do Usu&aacute;rio:<br/>
-			  <input type="text"/></label>
+			  <input type="text" id="login1" name="login1"/></label>
 
 		</fieldset>
 
@@ -45,19 +45,19 @@ else :
 		      
 		      <label>Rua:
 		      <label style="margin-left: 65%">N&uacute;mero:<br>
-		      <input type="text" size="40px"/></label>
-		      <input type="text" size="5px"/></label><br></br>
+		      <input type="text" id="rua" name="rua" size="40px"/></label>
+		      <input type="text" id="num" name="num" size="5px"/></label><br></br>
 		      
 		      <label>Bairro: 
 		      <label style="margin-left: 30.5%">Complemento<br>
-		      <input type="text"/></label>
-		      <input type="text"/> </label><br><br>
+		      <input type="text" id="bairro" name="bairro"/></label>
+		      <input type="text" id="complemento" name="complemento"/> </label><br><br>
 		      
 		      <label>Cidade: 
 		      <label style="margin-left: 29.5%">Estado:<br>
-		      <input type="text"/></label>
+		      <input type="text" id="cidade" name="cidade"/></label>
 		      
-		      <select>
+		      <select id="estado" name="estado">
 			  <option>AC</option>
 			  <option>AL</option>
 			  <option>AM</option>
