--- a/application/views/scripts/projetos/nova-tarefa.phtml
+++ b/application/views/scripts/projetos/nova-tarefa.phtml
@@ -1,4 +1,5 @@
 <form action="nova-tarefa" method="post">
+    <input type="hidden" name="idprojeto" value="<?= $this->projeto->idprojeto ?>" />
     <label>Nome: <input type="text" id="nome" name="nome" /></label><br />
     <label>Data Início: <input type="text" id="dataInicio" name="dataInicio" /></label><br />
     <label>Data Fim(Previsão): <input type="text" id="dataPrevFim" name="dataPrevFim" /></label><br />     
