Correção bug em novo, editar e remover usuários.

--- a/application/views/scripts/usuarios/editar.phtml
+++ b/application/views/scripts/usuarios/editar.phtml
@@ -36,7 +36,7 @@ else :
     </label>
     <br /> 
     <label>Login: 
-        <input type="text" id="login" name="login1" value="<?= $this->login->login ?>" />
+        <input type="text" id="login" name="login" value="<?= $this->login->login ?>" />
     </label>
     <br /> 
     <label>Rua: 
