--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -10,90 +10,66 @@ else :
 ?>
 
 <div id="cadastro">
-<form action="novo" method="post">
-		<fieldset id="pessoal">
-				<legend>Informa&ccedil;&otilde;es pessoais</legend>
-		      
-		      <label>Nome do Usu&aacute;rio: <br/>
-		      <input type="text" id="nome" name="nome" size="60px"/></label><br/><br/>
-		      
-		      <label>Data de Nascimento:
-		      <label style="margin-left: 3%">Sexo:<br/>
-		      <input type="text" id="dataNasc" name="dataNasc" size="14"/></label>
-		      
-		      <select id="sexo" name="sexo"> 
-			  <option>Masculino</option>
-			  <option>Feminino</option>
-		      </select> </label><br/><br/>
-		      
-		      <label>CPF
-		      <label style="margin-left: 33.5%">Telefone:<br/>
-		      <input type="text" id="cpf" name="cpf"/></label>
-		      <input type="text"id="telefone" name="telefone"/></label><br/><br/>
-		      
-		      <label>E-mail:<br/>
-		      <input type="text" id="email" name="email" size="60px"/></label><br></br>
+    <form action="novo" method="post">
+        <fieldset id="pessoal">
+            <legend>Informa&ccedil;&otilde;es pessoais</legend>
+
+            <label>Nome do Usu&aacute;rio: <br/>
+            <input type="text" id="nome" name="nome" size="60px"/></label><br/><br/>
+
+            <label>Data de Nascimento:
+            <label style="margin-left: 3%">Sexo:<br/>
+            <input type="text" id="dataNasc" name="dataNasc" size="14"/></label>
+
+            <select id="sexo" name="sexo"> 
+            <option value="M">Masculino</option>
+            <option value="F">Feminino</option>
+            </select> </label><br/><br/>
+
+            <label>CPF
+            <label style="margin-left: 33.5%">Telefone:<br/>
+            <input type="text" id="cpf" name="cpf"/></label>
+            <input type="text"id="telefone" name="telefone"/></label><br/><br/>
+
+            <label>E-mail:<br/>
+            <input type="text" id="email" name="email" size="60px"/></label><br></br>
 
 
-		      <label> Login do Usu&aacute;rio:<br/>
-			  <input type="text" id="login1" name="login1"/></label>
+            <label> Login do Usu&aacute;rio:<br/>
+            <input type="text" id="login" name="login"/></label>
 
-		</fieldset>
+        </fieldset>
 
-		<fieldset id="endereco">
-		      <legend>Endere&ccedil;o</legend>
-		      
-		      <label>Rua:
-		      <label style="margin-left: 65%">N&uacute;mero:<br>
-		      <input type="text" id="rua" name="rua" size="40px"/></label>
-		      <input type="text" id="num" name="num" size="5px"/></label><br></br>
-		      
-		      <label>Bairro: 
-		      <label style="margin-left: 30.5%">Complemento<br>
-		      <input type="text" id="bairro" name="bairro"/></label>
-		      <input type="text" id="complemento" name="complemento"/> </label><br><br>
-		      
-		      <label>Cidade: 
-		      <label style="margin-left: 29.5%">Estado:<br>
-		      <input type="text" id="cidade" name="cidade"/></label>
-		      
-		      <select id="estado" name="estado">
-			  <option>AC</option>
-			  <option>AL</option>
-			  <option>AM</option>
-			  <option>AP</option>
-			  <option>BA</option>
-			  <option>CE</option>
-			  <option>ES</option>
-			  <option>GO</option>
-			  <option>MA</option>
-			  <option>MG</option>
-			  <option>MS</option>
-			  <option>MT</option>
-			  <option>PA</option>
-			  <option>PB</option>
-			  <option>PE</option>
-			  <option>PI</option>
-			  <option>PR</option>
-			  <option>AC</option>
-			  <option>RJ</option>
-			  <option>RN</option>
-			  <option>RO</option>
-			  <option>RR</option>
-			  <option>RS</option>
-			  <option>SC</option>
-			  <option>SE</option>
-			  <option>SP</option>
-			  <option>TO</option>
-		      </select></label> <br></br>
+        <fieldset id="endereco">
+            <legend>Endere&ccedil;o</legend>
 
+            <label>Rua:
+            <label style="margin-left: 65%">N&uacute;mero:<br>
+            <input type="text" id="rua" name="rua" size="40px"/></label>
+            <input type="text" id="num" name="num" size="5px"/></label><br></br>
 
-			<input id="cancelar" type="submit" value="Cancelar"/>
-			<input id="salvar" type="submit" value="Salvar"/>
-		    
-		 </fieldset>
-</form>
-    </div>
+            <label>Bairro: 
+            <label style="margin-left: 30.5%">Complemento<br>
+            <input type="text" id="bairro" name="bairro"/></label>
+            <input type="text" id="complemento" name="complemento"/> </label><br><br>
+
+            <label>Cidade: 
+            <label style="margin-left: 29.5%">Estado:<br>
+            <input type="text" id="cidade" name="cidade"/></label>
+
+            <select id="estado" name="estado">
+                <?php 
+                foreach ($this->estados as $estado) 
+                    echo "<option value\"$estado\">$estado</option>";
+                ?>
+            </select></label> <br></br>
+
+            <input id="cancelar" type="reset" value="Cancelar"/>
+            <input id="salvar" type="submit" value="Salvar"/>
+            
+        </fieldset>
+    </form>
+</div>
 
 <?php
 endif;
