--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -87,9 +87,9 @@ else :
 			  <option>TO</option>
 		      </select></label> <br></br>
 
-
-			<input id="cancelar" type="submit" value="Cancelar"/>
+			
 			<input id="salvar" type="submit" value="Salvar"/>
+                        <input id="cancelar" type="button" value="Cancelar"/>
 		    
 		 </fieldset>
 </form>
