--- a/public/css/cadastroTarefas.css
+++ b/public/css/cadastroTarefas.css
@@ -1,20 +1,31 @@
 form {
   float: left;
-  width: auto;
   height: auto;
   font: 14px Arial;
 }
 
+#tarefa {
+    margin-top: 60px;
+    margin-left: 25%;
+    padding: 3%;
+    border: 2px solid #D8D8D8;
+    width: 100%;
+}
+
 #pessoal {
-	margin-top: 60px;
-	margin-left: 30%;
-	padding: 2%;
-	border: 2px solid #D8D8D8;
-	width: 100%;
+    margin-top: 60px;
+    margin-left: 30%;
+    padding: 2%;
+    border: 2px solid #D8D8D8;
+    width: 100%;
+}
+
+#prioridade {
+    margin-right: 23px;
 }
 
 label {
-	margin-left: 0.7%;
+    margin-left: 0.7%;
 }
 
 legend {
@@ -70,4 +81,3 @@ textarea {
   background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
   cursor: pointer;
 }
-
