--- a/application/views/scripts/projetos/novo.phtml
+++ b/application/views/scripts/projetos/novo.phtml
@@ -7,20 +7,19 @@
             <label>Nome do Projeto: 
                 <input type="text" id="nome" name="nome"size="60px" /><br/></label><br />
             
-            <label>Data Inicio: 
+            <label>Data Inicio: <br/>
                 <input type="text" id="dataInicio" name="dataInicio" size="14px" /></label>
                 
-            
-            <label id="dataFim">Data Final (Previs&atilde;o): <br/>
+            <label id="dataFim">Data Final (Previs&atilde;o): 
                 <input type="text" id="dataPrevFim" name="dataPrevFim" size="14px" /></label><br /> <br/>
                 
-            <label> Descri&ccedil;&atilde;o:
+            <label> Descri&ccedil;&atilde;o: <br/>
                 <textarea id="descricao" rows="5" cols="60"></textarea></label><br></br>            
             
-            <label>Repositório: 
+            <label>Repositório: <br/>
                 <input type="text" id="repositorio" name="repositorio" /></label> 
                 
-            <label id="ger">Gerente: 
+            <label id="ger">Gerente: <br/>
                 <select id="gerente" name="gerente">
                     <?php 
                     foreach($this->usuarios as $usuario)
