--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Administrador</title>
-    <link rel="stylesheet" type="text/css" href="/css/geral.css"/>
+    <title>DarthSCM | </title>
+    <link rel="stylesheet" type="text/css" href="/css/geral.css" />
     <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     
     
   </head>
