--- a/application/layouts/scripts/login.phtml
+++ b/application/layouts/scripts/login.phtml
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>Login</title>
+        <title>DarthSCM | Login</title>
         <link rel="stylesheet" type="text/css" href="/css/login.css" />
+        <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
     </head>
 
     <body>
