--- a/application/views/scripts/projetos/relatorio-projeto.phtml
+++ b/application/views/scripts/projetos/relatorio-projeto.phtml
@@ -9,7 +9,7 @@
         $int1=new DateInterval('P0D');
             $int2=new DateInterval('P0D');
             $d2="";$h2="";$m2="";
-            projetos::trataInterval (&$tempo, &$int1, &$int2, &$d2, &$h2, &$m2);
+            projetos::trataInterval (&$tempo, &$int2);
             projetos::SomaInterval ($int1, $int2);
        ?>
     <tr>
