--- a/application/views/scripts/projetos/relatorio-colaborador.phtml
+++ b/application/views/scripts/projetos/relatorio-colaborador.phtml
@@ -15,7 +15,7 @@
            $d2="";$h2="";$m2=""; 
            $int1=new DateInterval('P0D');
            $int2=new DateInterval('P0D');
-           projetos::trataInterval (&$tempo, &$int1, &$int2, &$d2, &$h2, &$m2);        
+           projetos::trataInterval (&$tempo, &$int2);        
            $int2=projetos::SomaInterval($int1, $int2);       
         ?>
         <td><?= $int2->d." days ".$int2->format('%H').":".$int2->format('%I').":".$int2->format('%S')?></td>     
