--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -61,9 +61,9 @@
     </div>
 
 
-<!--    <div id="rodape">
+    <div id="rodape">
             <img src="/imagens/logo2.png">
-    </div> -->
+    </div> 
     
     </body>
 </html>
