--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,1 +1,31 @@
-<p>Login</p>
+<?php echo $this->headLink()->appendStylesheet('/css/telaAdm.css');?>
+
+<div id="projetos">
+        <ul><fieldset>
+                <legend>Últimos Projetos</legend>
+                <li><p>Nome da Projeto </p>
+                        <p>Descrição da Projeto:</p>
+                        <a href="#">+ detalhes</a>
+                </li>
+        </fieldset></ul>
+</div>
+
+
+<div id="tarefas">
+        <ul><fieldset>
+                <legend>Últimas Tarefas</legend>
+                <li><p>Nome da Tarefa </p>
+                        <p>Descrição da Tarefa:</p>
+                        <a href="#">+ detalhes</a>
+                </li>
+        </fieldset>
+        </ul>
+</div>
+
+<div id="mensagens">
+    <fieldset>
+        <legend>Mensagens</legend>
+            <p>Mensagens não lidas</p>
+            <a href="#" id="image"><img src="/imagens/email-icon.png"/></a>
+    </fieldset>
+</div>
