--- a/public/css/cadastroProjeto.css
+++ b/public/css/cadastroProjeto.css
@@ -12,7 +12,7 @@ form {
 }
 
 #dataFim {
-    float: right;
+    margin-left: 18%;
 }
 
 #dataPrevFim {
@@ -20,7 +20,7 @@ form {
 }
 
 #ger {
-    margin-left: 25%;
+    margin-left: 27%;
 }
 
 #gerente {
@@ -74,6 +74,7 @@ textarea {
 }
 
 #cancelar, #salvar {
+  float: right;
   font:bold 15px Arial;
   color:#838383;
   background:#d3d4e8;
@@ -86,13 +87,19 @@ textarea {
   height: 40px;
 }
 
-#salvar:hover{
-  background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
-  cursor: pointer;
+#salvar {
+    margin-right: 15px;
 }
 
-#cancelar:hover{
-  background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
-  cursor: pointer;
+#cancelar:hover, #salvar:hover{
+    background: #deefff; /* Old browsers */
+	background: -moz-linear-gradient(top, #deefff 0%, #98bede 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(100%,#98bede)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #deefff 0%,#98bede 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #deefff 0%,#98bede 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #deefff 0%,#98bede 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #deefff 0%,#98bede 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#98bede',GradientType=0 ); /* IE6-9 */
+	cursor: pointer;
 }
 
