--- a/public/css/telaUsuarios.css
+++ b/public/css/telaUsuarios.css
@@ -1,7 +1,9 @@
 #tabelaUsuarios {
+    position: absolute;
     border-collapse:collapse;
-    margin: 0 auto;
     background: #FFE9E8;
+    left: 180px;
+    margin-top: 80px;
 }
 
 #tabelaUsuarios, td, th {
@@ -47,14 +49,15 @@ td {
 }
 
 #botaoCad {
-    margin-left: 91%;
-    margin-top: 2%;
+    margin-top: 400px;
+    margin-left: 77.5%;
     background:#d3d4e8;
     border:4px solid #ffffff;
     text-align: center;
     text-shadow:0px 0px 0px #2e2d2e;
     box-shadow:0px 0px 1px #000000;
     cursor:pointer;
+    position: absolute;
     width: 90px;
     height: 40px;
 }
@@ -72,6 +75,7 @@ td {
 }
 
 #paginacao {
-    position: relative;
-    margin-left: 625px;
+    top: 500px;
+    position: absolute;
+    margin-left: 615px;
 }
