--- a/application/views/scripts/projetos/listar-tarefas.phtml
+++ b/application/views/scripts/projetos/listar-tarefas.phtml
@@ -105,7 +105,7 @@
                         )
                         ); 
                 ?>" 
-                title="Remover"><img src="/imagens/edit.png"/>
+                title="Remover"><img src="/imagens/delete-icon.png"/>
             </a></li>
 
             <li><a href="
@@ -117,7 +117,7 @@
                         )
                         ); 
                 ?>" 
-                title="Fechar"><img src="/imagens/edit.png"/>
+                title="Fechar"><img src="/imagens/fechar.png"/>
             </a></li>
 
             <li><a href="
