--- a/application/views/scripts/projetos/listar-tarefas.phtml
+++ b/application/views/scripts/projetos/listar-tarefas.phtml
@@ -129,7 +129,7 @@
                         )
                         ); 
                 ?>" 
-                title="Alocar"><img src="/imagens/edit.png"/>
+                title="Alocar"><img src="/imagens/alocar.png"/>
             </a></li>
 
             <li><a href="
@@ -141,7 +141,7 @@
                         )
                         ); 
                 ?>" 
-                title="Desalocar"><img src="/imagens/edit.png"/>
+                title="Desalocar"><img src="/imagens/desalocar.png"/>
             </a></li>
 
             <li><a href="
@@ -153,7 +153,7 @@
                         )
                         ); 
                 ?>" 
-                title="Adiconar"><img src="/imagens/edit.png"/>
+                title="Adiconar"><img src="/imagens/Apps-clock-icon.png"/>
             </a></li>
 
             <li><a href="
@@ -165,7 +165,7 @@
                         )
                         ); 
                 ?>" 
-                title="NovaSubTarefa"><img src="/imagens/edit.png"/>
+                title="NovaSubTarefa"><img src="/imagens/folder-add-icon.png"/>
             </a></li>
        </ul>
        </fieldset>
